<resources>
    <string name="app_name">Resale</string>
    <string name="action_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="catalog_fragment_label">Catalog Fragment</string>

    <string name="catalog_fragment_error" />
    <string name="login_fragment_label">Login</string>
    <string name="action_logout">Logout</string>
    <string name="item_fragment_label">Item</string>
    <string name="create_item">Create Item</string>
    <string name="cancel">Cancel</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="image_of_item">Image of the item for sale</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="picture_url">URL of Picture</string>
    <string name="login_or_register_below">Login or register below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="should_be_overwritten">This should not be seen</string>
    <string name="seller">Seller</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>