<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateItemDialogFragment">

    <TextView
        android:id="@+id/textView_create_item_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <EditText
        android:id="@+id/editText_create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editText_create_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_create_pictureUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/picture_url"
        android:importantForAutofill="no"
        android:inputType="textUri" />

</LinearLayout>